kubernetes/apps/authentik/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  labels:
    backups.kalexlab.xyz/use: "true"
