kubernetes/apps/authentik/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`auth.kalexlab.xyz`)
      services:
        - name: authentik-server
          port: http
  tls:
    secretName: authentik-certificate
