kubernetes/apps/authentik/manifests/middlewares.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-forward-auth
spec:
  forwardAuth:
    address: http://ak-outpost-authentik-embedded-outpost.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-entitlements
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
    maxResponseBodySize: 1048576 # 1MB
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-outpost-callback
  annotations:
    # No need to monitor this, embedded outpost is
    # already covered by authentik-server service
    gatus.kalexlab.xyz/enabled: "false"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: PathPrefix(`/outpost.goauthentik.io/`)
      priority: 100
      services:
        - name: ak-outpost-authentik-embedded-outpost
          port: http
      middlewares:
        - name: authentik-forward-auth
  # Intentionally empty: let Traefik pick the certificate for the host that
  # was matched by the actual application IngressRoute
  tls: {}
